--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
         /* Support Button - Top Right Corner */
         .support-button {
             position: fixed;
-            top: 100px;
+            top: 20px;
             right: 20px;
-            z-index: 999;
-            background: linear-gradient(135deg, #1a4d2e 0%, #2d5f3f 100%);
+            z-index: 9999;
+            background: linear-gradient(135deg, #ff9f43 0%, #ff6b6b 100%);
             color: white;
             padding: 1rem 1.5rem;
             border-radius: 15px;
-            box-shadow: 0 8px 25px rgba(26, 77, 46, 0.5);
+            box-shadow: 0 8px 25px rgba(255, 107, 107, 0.5);
             cursor: pointer;
             transition: all 0.3s;
             border: 2px solid rgba(255,255,255,0.3);
@@ -115,8 +115,8 @@
         }
 
         .support-button:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 35px rgba(26, 77, 46, 0.7);
+            transform: translateY(-5px) scale(1.05);
+            box-shadow: 0 12px 35px rgba(255, 107, 107, 0.7);
         }
 
         .support-button-icon {
@@ -140,7 +140,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0,0,0,0.7);
+            background: rgba(0,0,0,0.8);
             z-index: 10000;
             justify-content: center;
             align-items: center;
@@ -195,6 +195,7 @@
             gap: 1rem;
             margin-bottom: 2rem;
             border-bottom: 2px solid #ddd;
+            flex-wrap: wrap;
         }
 
         .support-tab {
@@ -202,11 +203,13 @@
             background: none;
             border: none;
             color: #666;
-            font-size: 1.1rem;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s;
             border-bottom: 3px solid transparent;
             font-weight: 600;
+            flex: 1;
+            min-width: 100px;
         }
 
         .support-tab:hover {
@@ -287,66 +290,6 @@
             color: #666;
             line-height: 1.8;
             margin-bottom: 0.5rem;
-        }
-
-        /* Header */
-        header {
-            background: rgba(26, 77, 46, 0.95);
-            backdrop-filter: blur(15px);
-            color: white;
-            padding: 1rem 0;
-            box-shadow: 0 4px 30px rgba(0,0,0,0.3);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        .nav-top {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-
-        .logo {
-            font-size: 2rem;
-            font-weight: bold;
-            text-shadow: 3px 3px 6px rgba(0,0,0,0.4);
-        }
-
-        .menu-toggle {
-            display: none;
-            background: none;
-            border: none;
-            color: white;
-            font-size: 1.5rem;
-            cursor: pointer;
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 1.5rem;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: all 0.3s;
-        }
-
-        .nav-links a:hover {
-            background: rgba(255,255,255,0.2);
         }
 
         /* Hero Section */
@@ -541,20 +484,18 @@
 
         /* Mobile */
         @media (max-width: 968px) {
-            .menu-toggle { display: block; }
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-                margin-top: 1rem;
-            }
-            .nav-links.active { display: flex; }
             .hero h1 { font-size: 2.5rem; }
             .features h2 { font-size: 2rem; }
             .support-button {
-                top: 80px;
+                top: 15px;
                 right: 15px;
                 padding: 0.8rem 1rem;
+            }
+            .support-button-icon {
+                font-size: 1.2rem;
+            }
+            .support-button-text {
+                font-size: 0.8rem;
             }
             .support-modal-content {
                 padding: 2rem 1.5rem;
@@ -562,6 +503,10 @@
             .support-tabs {
                 flex-direction: column;
                 gap: 0.5rem;
+            }
+            .support-tab {
+                font-size: 0.9rem;
+                padding: 0.8rem 1rem;
             }
         }
     </style>
@@ -592,9 +537,9 @@
             <h2>📧 Support & Contact</h2>
             
             <div class="support-tabs">
-                <button class="support-tab active" onclick="switchTab('queries')">❓ Queries</button>
-                <button class="support-tab" onclick="switchTab('complaints')">⚠️ Complaints</button>
-                <button class="support-tab" onclick="switchTab('contact')">📞 Contact</button>
+                <button class="support-tab active" onclick="switchTab(event, 'queries')">❓ Queries</button>
+                <button class="support-tab" onclick="switchTab(event, 'complaints')">⚠️ Complaints</button>
+                <button class="support-tab" onclick="switchTab(event, 'contact')">📞 Contact</button>
             </div>
 
             <!-- Queries Tab -->
@@ -688,29 +633,6 @@
             </div>
         </div>
     </div>
-
-    <header>
-        <nav>
-            <div class="nav-top">
-                <div class="logo">☪ Islamic Hub</div>
-                <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-            </div>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">🏠 Home</a></li>
-                <li><a href="prayer-tools.html">🕌 Prayer</a></li>
-                <li><a href="quran.html">📕 Quran</a></li>
-                <li><a href="daily-hadith.html">📖 Hadith</a></li>
-                <li><a href="ayah-of-the-day.html">🌟 Ayah</a></li>
-                <li><a href="dua-of-the-day.html">🤲 Dua</a></li>
-                <li><a href="calendar.html">📅 Calendar</a></li>
-                <li><a href="zakat-calculator.html">💰 Zakat</a></li>
-                <li><a href="kids-stories.html">👶 Kids</a></li>
-                <li><a href="dawah.html">📢 Dawah</a></li>
-                <li><a href="community.html">💬 Community</a></li>
-                <li><a href="halal-games.html">🎮 Games</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <section class="hero">
         <div class="hero-bismillah">بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</div>
@@ -812,11 +734,6 @@
     </footer>
 
     <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById('navLinks');
-            navLinks.classList.toggle('active');
-        }
-
         function openSupportModal() {
             document.getElementById('supportModal').classList.add('active');
         }
@@ -825,7 +742,7 @@
             document.getElementById('supportModal').classList.remove('active');
         }
 
-        function switchTab(tabName) {
+        function switchTab(event, tabName) {
             // Hide all tabs
             document.querySelectorAll('.support-tab-content').forEach(tab => {
                 tab.classList.remove('active');
